<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/txt_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_name" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_name_label"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/form_name"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_site_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_name"
            android:layout_marginTop="15dp"
            android:text="@string/form_site_name" />

        <EditText
            android:id="@+id/edit_site_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_site_name"
            android:inputType="text" />


        <TextView
            android:id="@+id/txt_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_site_name"
            android:layout_marginTop="20dp"
            android:text="@string/form_category" />

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_category" />

        <TextView
            android:id="@+id/txt_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner_category"
            android:layout_marginTop="@dimen/form_item_margin"
            android:text="@string/form_province" />

        <EditText
            android:id="@+id/edit_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_province"
            android:inputType="text" />

        <TextView
            android:id="@+id/txt_district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_province"
            android:layout_marginTop="@dimen/form_item_margin"
            android:text="@string/form_district" />

        <EditText
            android:id="@+id/edit_district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_district"
            android:inputType="text" />

        <TextView
            android:id="@+id/txt_ds_division"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_district"
            android:layout_marginTop="@dimen/form_item_margin"
            android:text="@string/form_ds_division" />

        <EditText
            android:id="@+id/edit_ds_division"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_ds_division"
            android:inputType="text" />

        <TextView
            android:id="@+id/txt_gn_division"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_ds_division"
            android:layout_marginTop="@dimen/form_item_margin"
            android:text="@string/form_gn_division" />

        <EditText
            android:id="@+id/edit_gn_division"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_gn_division"
            android:inputType="text" />

        <TextView
            android:id="@+id/txt_nearest_town"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_gn_division"
            android:layout_marginTop="@dimen/form_item_margin"
            android:text="@string/form_nearest_town" />

        <EditText
            android:id="@+id/edit_nearest_town"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_nearest_town"
            android:inputType="text" />

        <!--<LinearLayout-->
            <!--android:id="@+id/layout_location"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/edit_nearest_town"-->
            <!--android:layout_marginTop="@dimen/form_item_margin"-->
            <!--android:baselineAligned="false"-->
            <!--android:orientation="horizontal">-->

            <!--<LinearLayout-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:orientation="vertical">-->

                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/form_latitude" />-->

                <!--<EditText-->
                    <!--android:id="@+id/edit_latitude"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:inputType="numberSigned|numberDecimal" />-->
            <!--</LinearLayout>-->

            <!--<LinearLayout-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:orientation="vertical">-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/form_longitude" />-->

                <!--<EditText-->
                    <!--android:id="@+id/edit_longitude"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:inputType="numberSigned|numberDecimal" />-->

            <!--</LinearLayout>-->
        <!--</LinearLayout>-->

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/edit_nearest_town"
            tools:context=".MainActivity" />

        <TextView
            android:id="@+id/txt_name_of_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/map"
            android:layout_marginTop="@dimen/form_item_margin"
            android:text="@string/form_name_of_owner" />

        <EditText
            android:id="@+id/edit_name_of_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_name_of_owner"
            android:inputType="text" />

        <TextView
            android:id="@+id/txt_name_of_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_name_of_owner"
            android:layout_marginTop="@dimen/form_item_margin"
            android:text="@string/form_name_of_user" />

        <EditText
            android:id="@+id/edit_name_of_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_name_of_user"
            android:inputType="text" />

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_name_of_user"
            android:layout_marginTop="@dimen/form_item_margin"
            android:text="@string/form_description" />

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_description"
            android:gravity="top|start"
            android:inputType="text"
            android:lines="2" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_description"
            android:padding="10dp"
            android:text="@string/form_submit_button" />

    </RelativeLayout>

</ScrollView>
